--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 
     <p>subimos nuestro repositorio</p>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eos et mollitia nemo nobis nesciunt! Aspernatur odit tempora reiciendis omnis!</p>
+
 </body>
 </html>
