--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <h1> trabajamos con github</h1>
 
+    <h2>Hola mamor</h2>
+
      <div>
         <img src="./img/goku.jpg" alt="Goku" width="500px">
      </div>
